--- a/index_6.html
+++ b/index_6.html
@@ -31,9 +31,9 @@
             <div class="content-item-box">
               <img class="content-item-picture" src="picture/image1.png" alt="Shopping Tours">
                 <div class="active-window">
-                  <p class="active-window-item-1">from</p>
-                  <p class="active-window-item-2">€50</p>
-                  <p class="active-window-item-3">View Details</p>
+                  <p class="active-window-item-1">from intim</p>
+                  <p class="active-window-item-2">€50*100</p>
+                  <p class="active-window-item-3">View intim Details</p>
                 </div>
             </div>
             <p class="content-subscription">Shopping Tours</p>
