--- a/index_6.html
+++ b/index_6.html
@@ -33,7 +33,7 @@
                 <div class="active-window">
                   <p class="active-window-item-1">from intim</p>
                   <p class="active-window-item-2">€50*100</p>
-                  <p class="active-window-item-3">View Veryyyy intim Details .V2.</p>
+                  <p class="active-window-item-3">View Veryyyy intim Details .V2. V3</p>
                 </div>
             </div>
             <p class="content-subscription">Shopping Tours</p>
